fix(html): remove duplicated overflow settings

--- a/packages/css/scss/base/_all.sass
+++ b/packages/css/scss/base/_all.sass
@@ -14,7 +14,6 @@ html
   text-size-adjust: 100%
   -webkit-tap-highlight-color: transparent
   -webkit-overflow-scrolling: auto
-  overflow-x: hidden
 
 *:focus
   -webkit-tap-highlight-color: transparent
